# wikitools

./: .gitignore  API.py  CHANGELOG  CHANGELOG.md  MANIFEST.in  README  README.md  Wiki.py  pyproject.toml  setup.py
Wiki/: API.py  Category.py  Page.py  User.py  Wiki.py  __init__.py  api.py  page.py
test/: DOC  README  test.py  testpages.xml  wikitoolstestpages.xml
wikitools/: __init__.py  api.py  category.py  exceptions.py  internalfunctions.py  page.py  pagelist.py  user.py  wiki.py  wikifile.py
wikitools3/: __init__.py  api.py  category.py  page.py  pagelist.py  user.py  wiki.py  wikifile.py
wikitools_py3/: category.py  page.py  pagelist.py  user.py  wikifile.py
